// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > smtp > smtp > that an email is sent after a response for a an access request review 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": "email@email.com",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after a response for a release review 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": "email@email.com",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after an import has begun 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": [
      "user@example.com",
      "user2@example.com",
    ],
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after an import has complete 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": [
      "user@example.com",
      "user2@example.com",
    ],
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after an import has failed 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": [
      "user@example.com",
      "user2@example.com",
    ],
  },
]
`;

exports[`services > smtp > smtp > that an email is sent for Access Request Reviews 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": "email@email.com",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent for Release Reviews 1`] = `
[
  {
    "attachments": undefined,
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": "email@email.com",
  },
]
`;

exports[`services > smtp > smtp > that email is sent to model owners 1`] = `
[
  [
    {
      "attachments": undefined,
      "from": ""Bailo 📝" <bailo@example.org>",
      "html": "",
      "subject": "",
      "text": "",
      "to": [
        "user@example.com",
        "user2@example.com",
      ],
    },
  ],
]
`;

exports[`services > smtp > smtp > that sendEmail is called for each member of a group entity 1`] = `
[
  [
    {
      "attachments": undefined,
      "from": ""Bailo 📝" <bailo@example.org>",
      "html": "html",
      "subject": "subject",
      "text": "text",
      "to": "member1@email.com",
    },
  ],
  [
    {
      "attachments": undefined,
      "from": ""Bailo 📝" <bailo@example.org>",
      "html": "html",
      "subject": "subject",
      "text": "text",
      "to": "member2@email.com",
    },
  ],
]
`;
